git commit -m "Refactor: optimización funcional de servicios core"